--- a/bootstrap/css/estilo.css
+++ b/bootstrap/css/estilo.css
@@ -37,6 +37,15 @@ div#footer img {
     height:32px;
 }
 
+#divd1, #divd2 {
+    float: left;
+    width: 100px;
+    height: 35px;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid black;
+}
+
 nav {
     width: 100%;
     margin: 0 auto;
